tests/backend/checkmach/fail1.output
File "fail1.ml", line 3, characters 5-15:
Error (warning 197 [check-failed]): Annotation check for zero_alloc strict failed on function Fail1.test15 (camlFail1__test15_HIDE_STAMP)
